/*
  CarStandFCOOL API

  An API for managing a cloud-based car dealership service

  The version of the OpenAPI document: 1.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package openapitools;


message Maintenance {

  int32 maintenanceId = 1;

  int32 maintenanceCarId = 2;

  // maintenance type
  enum MaintenanceTypeEnum {
    MaintenanceTypeEnum_UNKNOWN = 0;
    MaintenanceTypeEnum_BASIC = 1;
    MaintenanceTypeEnum_FULL = 2;
  }

  MaintenanceTypeEnum maintenanceType = 3;

  // maintenance status
  enum MaintenanceStatusEnum {
    MaintenanceStatusEnum_UNKNOWN = 0;
    MaintenanceStatusEnum_ONGOING = 1;
    MaintenanceStatusEnum_FINISHED = 2;
  }

  MaintenanceStatusEnum maintenanceStatus = 4;

  string maintenanceClientNotes = 5;

  string maintenanceStaffNotes = 6;

  double maintenanceCost = 7;

  string maintenanceStartDate = 8;

  string maintenanceEndDate = 9;

}
